--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -17,6 +17,13 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
+      <div class="header-title">
+        <h1>
+          FullStack Developer
+        </h1>
+        <p>I code beautifully simple things, and love what I do.</p>
+        <img src="image/avatar-bis.png" alt="">
+      </div>
     </header>
 
     <main>
