modification css sur page portoflio

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -20,8 +20,11 @@
     </header>
 
     <main>
-      <!-- First banner with title, description, avatar and image desktop -->
-      <!-- You can use the avatar image on the folder image -->
+      <div class="presentation">
+      <h1>Full stack developper</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, similique magni? </p>
+      <img src="image/avatar.svg" alt = avatar>
+    </div>
       <section>
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
