centrage avatar et image bureau + responsive inclus

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/portfolio.css" />
+    <link rel="stylesheet" href="" />
     <title>Checkpoint 1 Portfolio</title>
   </head>
 
@@ -25,7 +26,7 @@
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
       <h1>Full Stack-Developper</h1>
-      <p>Hello , voici mon portfolio</p>
+      <p>Hello ,Je m'appelle Matt voici mon portfolio</p>
 
       <!-- You can use the avatar image on the folder image -->
       <section>
