finish step 1 in js part

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,7 +22,7 @@
           FullStack Developer
         </h1>
         <p>I code beautifully simple things, and love what I do.</p>
-        <img src="image/avatar-bis.png" alt="">
+        <img src="image/avatar-bis.png" alt="" id="avatar">
       </div>
     </header>
 
