--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -32,7 +32,7 @@
       <section>
         <figure class="desktop">
           <img src="image/avatar-bis.png" alt="avatar" />
-          <img src="image/desktop.svg" alt="desktop" />
+          <img src="image/desktop.svg" class="image-bureau" alt="desktop" />
         </figure>
       </section>
 
@@ -55,29 +55,32 @@
 
       <article class="skills">
         <h2 class="skills--title">My Skills</h2>
-        <section class="column">
-          <img src="image/frontend.svg" alt="" />
-          <h3>Back-end Developer</h3>
-          <p>I like to code things from scratch.</p>
-          <h4 class="pink-text">Languages I speak:</h4>
-          <p>MySql</p>
-          <h4 class="pink-text">Dev Tools:</h4>
-          <ul>
-            <li>VScode</li>
-          </ul>
-        </section>
-        <section class="column">
-          <img src="image/frontend.svg" alt="" />
-          <h3>Front-end Developer</h3>
-          <p>I love bringing ideas to life.</p>
-          <h4 class="pink-text">Languages I speak:</h4>
-          <p>HTML, CSS</p>
-          <h4 class="pink-text">Dev Tools:</h4>
-          <ul id="front-dev-tools">
-            <li>You can modify</li>
-            <li>You can modify</li>
-            <li>You can modify</li>
-          </ul>
+
+        <section class="the-skills">
+          <section class="column">
+            <img src="image/frontend.svg" alt="" />
+            <h3>Back-end Developer</h3>
+            <p>I like to code things from scratch.</p>
+            <h4 class="pink-text">Languages I speak:</h4>
+            <p>MySql</p>
+            <h4 class="pink-text">Dev Tools:</h4>
+            <ul>
+              <li>VScode</li>
+            </ul>
+          </section>
+          <section class="column">
+            <img src="image/frontend.svg" alt="" />
+            <h3>Front-end Developer</h3>
+            <p>I love bringing ideas to life.</p>
+            <h4 class="pink-text">Languages I speak:</h4>
+            <p>HTML, CSS</p>
+            <h4 class="pink-text">Dev Tools:</h4>
+            <ul id="front-dev-tools">
+              <li>You can modify</li>
+              <li>You can modify</li>
+              <li>You can modify</li>
+            </ul>
+          </section>
         </section>
       </article>
 
