--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,6 +22,11 @@
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
+      <div id="avatar-bis" >
+        <h2>Fullstacks Developper</h2>
+        <p>I code Beautifully simple things, and I lova whant I do</p>
+        <img src="image/avatar-bis.png" alt="avatar-bis">
+      </div>
       <section>
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
@@ -37,9 +42,8 @@
       </article>
 
       <!-- Bloc of list of skill front end and back end -->
-        
+      <h2 class="skills--title">My Skills</h2>
       <article class="skills">
-        <h2 class="skills--title">My Skills</h2>
           <section class="column">
               <img src="image/frontend.svg" alt="" />
               <h3>Back-end Developer</h3>
@@ -70,6 +74,7 @@
       <article class="projects">
           <h2>My Recent Work</h2>
           <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
+          <div class="fullbox">
           <section class="box">
             <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
             <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
@@ -89,6 +94,7 @@
             <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
             <p>A space and member management solution for coworking communities both big and small.</p>
             <a class="disabled" >Shutdown in 2017</a>
+          </div>
           </section>
       </article>      
     </main>
