Changement d'avatar en cliquant

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -31,7 +31,7 @@
       <!-- You can use the avatar image on the folder image -->
       <section>
         <figure class="desktop">
-          <img src="image/avatar-bis.png" alt="avatar" />
+          <img src="image/avatar-bis.png" id="avatar" />
           <img src="image/desktop.svg" class="image-bureau" alt="desktop" />
         </figure>
       </section>
