modif nom image

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -28,7 +28,7 @@
         <p>
           I code beautiful things and I love that I do.
         </p>
-        <img src = "image/avatar.svg" alt="Mon avatar">
+        <img src = "image/avatar.svg" alt="mon-avatar">
       </section>
       <section>
         <figure class="desktop">
