supréssion de l'image de bureau

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -23,9 +23,11 @@
     </header>
 
     <main>
-      <h1>FullStack Developper</h1>
-      <p>I code Beautifully simple thing, and I love what I do.</p>
-      <img src="image/avatar-bis.png" alt="avatar-bis" />
+      <div class="container">
+        <h1>FullStack Developper</h1>
+        <p>I code Beautifully simple thing, and I love what I do.</p>
+        <img src="image/avatar-bis.png" alt="avatar-bis" />
+      </div>
       <!-- You can use the avatar image on the folder image  -->
       <section>
         <figure class="desktop">
