Ajout bouton + changment prénom et couleur du texte

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -48,6 +48,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button id="button1">Modify text and color</button>
         </section>
       </article>
 
