--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -23,7 +23,7 @@
       <div class="presentation">
       <h1>Full stack developper</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, similique magni? </p>
-      <img src="image/avatar.svg" alt = avatar>
+      <img src="image/avatar.svg" alt = avatar id="avatar">
     </div>
       <section>
         <figure class="desktop">
@@ -33,10 +33,12 @@
 
       <!-- Second banner with description of your name and your presentation -->
       <article>
-        <section class="description pink-bg">
+        <section class="description pink-bg" id="presentation">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
-        </section>
+              <button>Modify text and color</button></section>
+
+      
       </article>
 
       <!-- Bloc of list of skill front end and back end -->
