changement avatar javascript

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -25,7 +25,7 @@
       <div id="avatar-bis" >
         <h2>Fullstacks Developper</h2>
         <p>I code Beautifully simple things, and I lova whant I do</p>
-        <img src="image/avatar-bis.png" alt="avatar-bis">
+        <img id="avatar" src="image/avatar-bis.png" alt="avatar-bis" onclick="changerImage()">
       </div>
       <section>
         <figure class="desktop">
