--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,7 +22,12 @@
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
-      <section>
+      <section class = "top-main">
+        <h1>FullStack Developer</h1>
+        <p>I code beautifully simple things, and I love what I do.</p>
+        <figure class="avatar">
+          <img src="image/avatar.svg" alt="avatar" id="avatar1"/>
+        </figure>
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
         </figure>
@@ -33,13 +38,15 @@
         <section class="description pink-bg">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
+          <button class="buttonModify">Modify text and color</button>
         </section>
-      </article>
+        </article>
 
       <!-- Bloc of list of skill front end and back end -->
         
       <article class="skills">
         <h2 class="skills--title">My Skills</h2>
+          <section class="column-skills">
           <section class="column">
               <img src="image/frontend.svg" alt="" />
               <h3>Back-end Developer</h3>
@@ -64,12 +71,14 @@
                 <li>You can modify</li>
               </ul>
             </section>
+          </section>
       </article>
 
       <!-- Third banner with list of all your projects -->
       <article class="projects">
           <h2>My Recent Work</h2>
           <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
+          <section class = "projects-boxes">
           <section class="box">
             <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
             <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
@@ -90,6 +99,7 @@
             <p>A space and member management solution for coworking communities both big and small.</p>
             <a class="disabled" >Shutdown in 2017</a>
           </section>
+        </section>
       </article>      
     </main>
     <footer class="description pink-bg">
