--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/portfolio.css">
     <title>Checkpoint 1 Portfolio</title>
   </head>
@@ -20,19 +21,22 @@
     </header>
 
     <main>
-      <!-- First banner with title, description, avatar and image desktop -->
-      <!-- You can use the avatar image on the folder image -->
+      <div class="description">
+        <h1>FullStack Developper</h1>
+        <p>I code beautifully simple things, and I love what I do</p>
+        <img id="imagechanger" src="image/avatar-bis.png" alt="avatar" />
+      </div>
       <section>
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
         </figure>
       </section>
 
-      <!-- Second banner with description of your name and your presentation -->
       <article>
         <section class="description pink-bg">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
+          <button onclick="myFunction()">Enter your name</button>
         </section>
       </article>
 
