--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -28,7 +28,7 @@
         <p>
           I code beautiful things and I love that I do.
         </p>
-        <img src = "image/avatar.svg" alt="mon-avatar">
+        <img id="mon-image" src = "image/avatar.svg" alt="mon-avatar">
       </section>
       <section>
         <figure class="desktop">
@@ -41,6 +41,7 @@
         <section class="description pink-bg">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
+          <button>Modify text and color</button>
         </section>
       </article>
 
