finish step 5 &6 in js part

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -58,7 +58,13 @@
               <h4 class="pink-text">Dev Tools:</h4>
               <ul>
                 <li>VScode</li>
+                <div id="add-tool-div">
+                  <input type="text" id="add-tool">
+                  <button id="add-button">Add</button>
+                </div>
+                
               </ul>
+
           </section>
           <section class="column">
               <img src="image/frontend.svg" alt="" />
@@ -72,6 +78,7 @@
                 <li>You can modify</li>
                 <li>You can modify</li>
               </ul>
+              <button id="modify-button">Modify</button>
             </section>
       </article>
 
