--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -49,6 +49,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button type="button">changer le nom + couleur</button>
         </section>
       </article>
 
