--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="css/portfolio.css" >
     <title>Checkpoint 1 Portfolio</title>
   </head>
 
@@ -16,7 +16,16 @@
           <li><a href="home.html">Instructions</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
+       
+        
       </nav>
+      <div id="title"> 
+        <h1>FullStack Developer</h1>
+        <p>I code beautifully simple things, and i love what i do</p>
+       <div id="avatar-container"> 
+        <img id="avatar" src="image/avatar-bis.png" alt="avatar">
+       </div>
+      </div>
     </header>
 
     <main>
@@ -24,7 +33,7 @@
       <!-- You can use the avatar image on the folder image -->
       <section>
         <figure class="desktop">
-          <img src="image/desktop.svg" alt="desktop" />
+          <img id="img-desktop" src="image/desktop.svg" alt="desktop" />
         </figure>
       </section>
 
